--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "serve-static": "^1.14.1",
     "vue-template-compiler": "^2.6.11"
   },
